--- a/src/main/webapp/resources/bootstrap/css/bootstrap-responsive.css
+++ b/src/main/webapp/resources/bootstrap/css/bootstrap-responsive.css
@@ -9,8 +9,8 @@
  */
 
 .errorblock {
-	color: #ff0000;
-	background-color: red;
+	color: #000;;
+	background-color: #f1e7e7;
 	border: 3px solid #ff0000;
 	padding: 8px;
 	margin: 16px;
